--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://kfc_store_database:Ra3M!x4bm2Gq9y$@cluster0.99hmc.mongodb.net/KFC_Store?retryWrites=true&w=majority&appName=Cluster0
-CLOUD_NAME=dp58v1nlv
-API_KEY=148462511885529
-API_SECRET=E9xRpmZR1uZt-gfj16Y-Mnvnaxg
+MONGO_URI=add your mongo db url
+CLOUD_NAME=Cloud name
+API_KEY=api key
+API_SECRET=api scret
